force-app/main/default/objects/vlocity_cmt__CachedAPIResponseOffers__c/vlocity_cmt__CachedAPIResponseOffers__c.object-meta.xml
<CustomObject>
    <description>This will have the mapping of the code of the offers present under that Cachekey.</description>
    <label>CachedAPIResponseOffers</label>
    <nameField>
        <label>CachedAPIResponseOffers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CachedAPIResponseOffers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>