force-app/main/default/objects/vlocity_cmt__CachedAPIResponseOffers__c/fields/vlocity_cmt__CachedAPIResponseId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CachedAPIResponseId__c</fullName>
    <label>CachedAPIResponseId</label>
    <referenceTo>vlocity_cmt__CachedAPIResponse__c</referenceTo>
    <relationshipLabel>Cached API Response Relationships</relationshipLabel>
    <relationshipName>CachedAPIResponse_Relationship</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>