force-app/main/default/objects/vlocity_cmt__CachedAPIResponseOffers__c/fields/vlocity_cmt__OfferCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OfferCode__c</fullName>
    <description>This will store the code of the offers present under that Cachekey.</description>
    <externalId>true</externalId>
    <label>OfferCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>