force-app/main/default/objects/vlocity_cmt__CachedAPIResponseOffers__c/fields/vlocity_cmt__OfferId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OfferId__c</fullName>
    <description>This will store the unique Id of a specific version of a product which got impacted due to the changes made on SObjects.</description>
    <label>OfferId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>